--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,47 @@ body {
     background-color: var(--secondary-color);
 }
 
+
+
 /* Questions Page Styles */
-.questions-page h2 {
+#Question-title{
+    background-color: var(--primary-color);
+}
+#q1{
+    background-color: var(--secondary-color);
+}
+.text-3xl{
+    color:#414A37
+}
+#question -text{
+    color: black;
+    background-color: var( --secondary-color);
+    box-shadow: 2px 4px 8px var( --primary-color);
+}
+.bg-gray-100{
+    background-color: var(--bg-color);
+}
+.content-card{
+    background-color:var(--bg-color) ;
+    box-shadow:   2px 4px 8px var(--secondary-color);
+}
+.content-card:hover{
+    box-shadow:   5px 9px 20px var(--primary-color);
+}
+.p-4 {
+    background-color:var(--bg-color); ;
+}
+
+
+
+/* .content card{
+    background-color: #DBC2A6;
+} */
+/* .questions-page h2 {
     color: var(--primary-color);
     font-size: 2rem;
 }
+    
 
 #mood-form {
     background-color: #fff;
@@ -117,7 +153,7 @@ body {
 
 .submit-button:hover {
     background-color: var(--secondary-color);
-}
+} */
 
 /* Story Page Styles */
 .story-page .story-content-box {
